2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/exult_studio.glade: East is a direction too :-)

2002-10-10  Max Horn  <max@quendi.de>

	* Info.plist.in: No .nib file used anymore
	* configure.in: Removed some unnecessary flags on MacOS X
	* audio/midi_drivers/mac_midi.cc: Use assert() instead of DebugStr()
	* gumps/AudioOptions_gump.cc: Work around a compiler bug on MacOS X

2002-10-10  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc (Exec_process): Split off separate class to
	handle the plotform-dependend exec'ing.

2002-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc,compile.cc:  Added a 'compile' window for
	running the usecode compiler and seeing the errors.

2002-10-07  Max Horn  <max@quendi.de>

	* data/credits.txt: Jackchaos.com hosted the old forum
	* several files: got rid of #pragma implementation/interface - it didn't
	  help us much anyway but triggered a compiler error on MacOS X
	* many files: get rid of using std::snprintf - according to the standard,
	  snprintf is *not* in namespace std

2002-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Get_distance() looks at owners of objs.
	This fixes the bug with selling the bread you bake in BG.

2002-09-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Guessing 'npc_nearby2()'.  Fixes
	Moonshade bug where companions don't show up to the trial.

2002-09-21  Jeff Freedman  <jeff@amy.nerble.net>

	* pathfinder/*:  GetNextStep returns a 'done' flag if the tile
	returned is the last in the path.
	* actions.cc:  Check for last step & return 0 if so.

2002-09-19  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Moved the 'no_halt' test to
	start().
	* schedule.cc:  Patrol schedule:  Look for path after executing
	Usecode, and keep going after sitting.  This fixes Freedom bug
	where the automaton doesn't talk to you upon arrival.
	* schedule: Don't follow Avatar if paralyzed.
