@@ -1,5 +1,6 @@
 2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* mapedit/exult_studio.glade: East is a direction too :-)
+	* objs/egg.cc: use shape 200, frame 1-5 for new missile eggs
 
 2002-10-10  Max Horn  <max@quendi.de>
 
